apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "n8n"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.31"
spec:
  type: LoadBalancer
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
      name: http
